--- a/archive.html
+++ b/archive.html
@@ -9,6 +9,8 @@
     <link rel="alternate" href="http://matipruvost.github.io//feed.xml" type="application/rss+xml" title="There are ideas to share · Hay ideas por compartir">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/mp.css">
+    <link rel="shortcut icon" href="/favicon.ico">
   </head>
   <body>
     <header class="header">
