--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         <article class="article intro">
           <header>
             <p class="date"><span>19. October 2015</span></p>
-            <h2><a href="/articles/wintersmith-tutorial/">Wintersmith tutoriial</a></h2>
+            <h2><a href="/articles/wintersmith-tutorial/">Wintersmith tutorial</a></h2>
           </header>
           <section class="content"><p>Guía completa para generar un blog utilizando <a href="http://wintersmith.io/">Wintersmith</a> y <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+<p><img src="/articles/wintersmith-tutorial/coding.png" alt="Coding"></p>
 <p>
             <p class="more"><a href="/articles/wintersmith-tutorial/">more</a></p>
           </section>
