--- a/archive.html
+++ b/archive.html
@@ -68,7 +68,7 @@
                 </li>
                 <li><span style="line-height:6.6000000000000005em" class="month-label">October</span>
                   <ul style="margin-left:7em">
-                    <li style="height:2.2em;line-height:2.2em"><a href="/articles/wintersmith-tutorial/">Wintersmith tutoriial</a></li>
+                    <li style="height:2.2em;line-height:2.2em"><a href="/articles/wintersmith-tutorial/">Wintersmith tutorial</a></li>
                     <li style="height:2.2em;line-height:2.2em"><a href="/articles/wintersmith/">Porque elegí Wintersmith</a></li>
                     <li style="height:2.2em;line-height:2.2em"><a href="/articles/hello-world/">Hello world</a></li>
                   </ul>
