Add links about cordova

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>14. December 2015</span></p>
+            <h2><a href="/articles/cordova-tutorials/">¿Cómo empezar con Apache Cordova?</a></h2>
+          </header>
+          <section class="content"><p>¡Felicitaciones! Estás interesado en aprender algo nuevo, los objetivos de superación y aprendizaje no son triviales, por lo tanto, este artículo te va a ayudar en el&nbsp;proceso.  </p>
+<p>
+            <p class="more"><a href="/articles/cordova-tutorials/">more</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>09. November 2015</span></p>
             <h2><a href="/articles/generators/">Generadores Yeoman</a></h2>
           </header>
@@ -74,16 +84,6 @@
           <section class="content"><p>Guía completa para generar un blog utilizando <a href="http://wintersmith.io/">Wintersmith</a> y <a href="https://pages.github.com/">GitHub Pages</a>.</p>
 <p>
             <p class="more"><a href="/articles/wintersmith-tutorial/">more</a></p>
-          </section>
-        </article>
-        <article class="article intro">
-          <header>
-            <p class="date"><span>08. October 2015</span></p>
-            <h2><a href="/articles/wintersmith/">Porque elegí Wintersmith</a></h2>
-          </header>
-          <section class="content"><p>Implementé este blog utilizando un generador de sitios estáticos llamado <a href="http://wintersmith.io/">Wintersmith</a>, sin embargo ¿Por qué hice esa&nbsp;elección?</p>
-<p>
-            <p class="more"><a href="/articles/wintersmith/">more</a></p>
           </section>
         </article>
       </div>
