--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>25. January 2016</span></p>
+            <h2><a href="/articles/taller-de-canciones/">Taller de canciones</a></h2>
+          </header>
+          <section class="content"><p>Una vez fui a un taller de canciones y salieron algunas 
+ideas que comparto para&nbsp;descargar.</p>
+<p>
+            <p class="more"><a href="/articles/taller-de-canciones/">more</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>20. December 2015</span></p>
             <h2><a href="/articles/albums-2015/">Los mejores lanzamientos del 2015</a></h2>
           </header>
@@ -77,16 +88,6 @@
             <p class="more"><a href="/articles/cordova-tutorials/">more</a></p>
           </section>
         </article>
-        <article class="article intro">
-          <header>
-            <p class="date"><span>09. November 2015</span></p>
-            <h2><a href="/articles/generators/">Generadores Yeoman</a></h2>
-          </header>
-          <section class="content"><p><a href="http://yeoman.io/">Yeoman</a> agiliza el inicio de un nuevo proyecto de software utilizando herramientas para facilitar el desempeño y&nbsp;productividad.</p>
-<p>
-            <p class="more"><a href="/articles/generators/">more</a></p>
-          </section>
-        </article>
       </div>
     </div>
     <footer>
@@ -97,7 +98,7 @@
 
         </section>
         <section class="copy">
-          <p>&copy; 2015 Mati Pruvost &mdash; powered by&nbsp;<a href="https://github.com/jnordberg/wintersmith">Wintersmith</a>
+          <p>&copy; 2016 Mati Pruvost &mdash; powered by&nbsp;<a href="https://github.com/jnordberg/wintersmith">Wintersmith</a>
           </p>
         </section>
       </div>
