Add a new article of the image-contrast project

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>01. March 2016</span></p>
+            <h2><a href="/articles/image-contrast/">Image contrast</a></h2>
+          </header>
+          <section class="content"><p>¿Cómo agregar contraste a un grupo de imágenes automáticamente con <a href="https://github.com/MatiPruvost/image-contrast">image-contrast</a>?</p>
+<p>
+            <p class="more"><a href="/articles/image-contrast/">more</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>25. January 2016</span></p>
             <h2><a href="/articles/taller-de-canciones/">Taller de canciones</a></h2>
           </header>
@@ -76,16 +86,6 @@ ideas que comparto para&nbsp;descargar.</p>
           <section class="content"><p>Mi resumen de discos y releases lanzados en el 2015 en&nbsp;Spotify.</p>
 <p>
             <p class="more"><a href="/articles/albums-2015/">more</a></p>
-          </section>
-        </article>
-        <article class="article intro">
-          <header>
-            <p class="date"><span>14. December 2015</span></p>
-            <h2><a href="/articles/cordova-tutorials/">¿Cómo empezar con Apache Cordova?</a></h2>
-          </header>
-          <section class="content"><p>¡Felicitaciones! Estás interesado en aprender algo nuevo, los objetivos de superación y aprendizaje no son triviales, por lo tanto, este artículo te va a ayudar en el&nbsp;proceso.  </p>
-<p>
-            <p class="more"><a href="/articles/cordova-tutorials/">more</a></p>
           </section>
         </article>
       </div>
